fixed rates table alignment and font

--- a/css/app.css
+++ b/css/app.css
@@ -206,6 +206,10 @@ p {
     margin-top: 200px;
 }
 
+.bold {
+	font-weight: bolder;
+}
+
 #guestBook {
         margin: 50px;
         margin-top: 200px;
